--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,5 +1,5 @@
 // @use "../styles/variables";   Не работает
-@import "../styles/variables";
+@import "../../styles/variables";
 
 .nav {
   display: flex;
@@ -27,19 +27,19 @@
   }
 
   .link-expenses {
-    background-image: url("../assets/images/expenses.svg");
+    background-image: url("../../assets/images/expenses.svg");
   }
 
   .link-analytics {
-    background-image: url("../assets/images/analytics.svg");
+    background-image: url("../../assets/images/analytics.svg");
   }
 
   .link-about {
-    background-image: url("../assets/images/about.svg");
+    background-image: url("../../assets/images/about.svg");
   }
 
   .link-logout {
-    background-image: url("../assets/images/logout.svg");
+    background-image: url("../../assets/images/logout.svg");
   }
 }
 
