--- a/src/components/Transaction/Transaction.scss
+++ b/src/components/Transaction/Transaction.scss
@@ -1,5 +1,3 @@
-@import "../../styles/variables";
-
 .transaction {
   display: grid;
   grid:
@@ -31,7 +29,7 @@
   }
 }
 
-@media (min-width: $breakpoint-tablet) {
+@include for-desktop-up {
   .transaction {
     grid:
       "tag amount pay-method"
