refactor: move component to separate folder

--- a/src/components/AddTransaction/AddTransaction.scss
+++ b/src/components/AddTransaction/AddTransaction.scss
@@ -14,7 +14,7 @@
     float: left;
     transform: scale(1.3);
     background: {
-      image: url("../assets/images/add.png");
+      image: url("../../assets/images/add.png");
       repeat: no-repeat;
       position: center;
       size: contain;
