--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -34,6 +34,9 @@
 
     .footer {
       display: block;
+      text-align: center;
+      border-top: 1px solid black;
+      padding: 16px;
     }
   }
 }
