--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -11,10 +11,11 @@
 
   nav {
     grid-area: nav;
+    z-index: 10;
   }
 
   main {
-    grid: main;
+    grid-area: main;
     padding: 0 16px;
   }
 
